feat(etiquetas): avisar tambien en los dos casos que salian en blanco
Una etiqueta de mas de una unidad con el SKU sin estandarizar no
imprimia nada: el operario embalaba sin saber que el embalaje estaba sin
resolver. Ahora el aviso no depende de la cantidad, y va sin el
encabezado REFERENCIA, que rotula datos de embalaje y ahi no hay
ninguno.

El otro caso en blanco era la formula diciendo que si sin ninguna de las
tres columnas cargadas: el bloque salia vacio y escondia que al Excel le
falta la carga. Sale como "SIN DATOS DE EMBALAJE", en el mismo recuadro,
con el cuerpo bajado a 32 porque sus 21 caracteres a 38 se pasan de los
390 de ancho y ^FB reimprime encima lo que no entra. El cuerpo lo decide
ahora el largo del texto, asi que NO ESTANDARIZADO sigue en 38.

El dialogo del final del lote lista los dos avisos por separado: a uno
le falta la decision y al otro la carga de las columnas.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>